--- a/basics/view/index.html
+++ b/basics/view/index.html
@@ -66,7 +66,7 @@
     <div data-md-component="skip">
       
         
-        <a href="#views" class="md-skip">
+        <a href="#views-masonite" class="md-skip">
           Перейти к содержанию
         </a>
       
@@ -615,6 +615,20 @@
 
             
           
+            
+              
+  
+  
+  
+    <li class="md-nav__item">
+      <a href="../environments/" class="md-nav__link">
+        Environments
+      </a>
+    </li>
+  
+
+            
+          
         </ul>
       </nav>
     </li>
@@ -917,7 +931,7 @@
                   
 
 
-<h1 id="views"><strong>Views</strong></h1>
+<h1 id="views-masonite">Views Masonite</h1>
 <p>Views в Masonite — отличный способ вернуть HTML в ваши контроллеры. Views имеют иерархию, 
 множество помощников и логических элементов управления, а также отличный способ отделить 
 бизнес-логику от логики представления.</p>
@@ -1411,6 +1425,21 @@ Masonite, это приведет к ошибке. Например, когда 
           </div>
         </a>
       
+      
+        
+        <a href="../environments/" class="md-footer__link md-footer__link--next" aria-label="Вперед: Environments" rel="next">
+          <div class="md-footer__title">
+            <div class="md-ellipsis">
+              <span class="md-footer__direction">
+                Вперед
+              </span>
+              Environments
+            </div>
+          </div>
+          <div class="md-footer__button md-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4 11v2h12l-5.5 5.5 1.42 1.42L19.84 12l-7.92-7.92L10.5 5.5 16 11H4Z"/></svg>
+          </div>
+        </a>
       
     </nav>
   
