--- a/basics/view/index.html
+++ b/basics/view/index.html
@@ -629,6 +629,20 @@
 
             
           
+            
+              
+  
+  
+  
+    <li class="md-nav__item">
+      <a href="../configuration/" class="md-nav__link">
+        Конфигурация
+      </a>
+    </li>
+  
+
+            
+          
         </ul>
       </nav>
     </li>
