--- a/basics/view/index.html
+++ b/basics/view/index.html
@@ -870,6 +870,20 @@
 
             
           
+            
+              
+  
+  
+  
+    <li class="md-nav__item">
+      <a href="../../feature/authorization/" class="md-nav__link">
+        Авторизация
+      </a>
+    </li>
+  
+
+            
+          
         </ul>
       </nav>
     </li>
