--- a/basics/view/index.html
+++ b/basics/view/index.html
@@ -996,6 +996,20 @@
 
             
           
+            
+              
+  
+  
+  
+    <li class="md-nav__item">
+      <a href="../../feature/scheduling/" class="md-nav__link">
+        Планировщик задач
+      </a>
+    </li>
+  
+
+            
+          
         </ul>
       </nav>
     </li>
